--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,17 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     //  Dagger-Hilt
-    implementation "com.google.dagger:hilt-android:2.44"
+    implementation "com.google.dagger:hilt-android:2.46.1"
     kapt "com.google.dagger:hilt-compiler:2.44"
+    //hilt work dependency
+    implementation "androidx.hilt:hilt-work:1.0.0"
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
+    // For instrumentation tests
+    androidTestImplementation  "com.google.dagger:hilt-android-testing:2.46.1"
+    kaptAndroidTest "com.google.dagger:hilt-compiler:2.44"
+    // For local unit tests
+    testImplementation "com.google.dagger:hilt-android-testing:2.46.1"
+    kaptTest "com.google.dagger:hilt-compiler:2.44"
 
     // RecyclerView
     implementation "androidx.recyclerview:recyclerview:1.3.0"
@@ -101,5 +110,38 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+
+    // Test
+    // Core library
+    androidTestImplementation('androidx.test:core:1.5.0')
+    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
+
+    // AndroidJUnitRunner and JUnit Rules
+    androidTestImplementation('androidx.test:runner:1.5.2')
+    androidTestImplementation('androidx.test:rules:1.5.0')
+    implementation 'androidx.work:work-runtime-ktx:2.8.1'
+
+    // Assertions
+    androidTestImplementation('androidx.test.ext:junit:1.1.5')
+    androidTestImplementation('androidx.test.ext:truth:1.5.0')
+    androidTestImplementation('com.google.truth:truth:1.0.1')
+
+    //kotlinx-coroutines-test
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1'
+
+    // Espresso dependencies
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.5.1')
+    androidTestImplementation('androidx.test.espresso:espresso-contrib:3.5.1')
+    androidTestImplementation('androidx.test.espresso:espresso-intents:3.5.1')
+    androidTestImplementation('androidx.test.espresso:espresso-accessibility:3.5.1')
+    androidTestImplementation('androidx.test.espresso:espresso-web:3.5.1')
+    androidTestImplementation('androidx.test.espresso.idling:idling-concurrent:3.5.1')
+
+    // The following Espresso dependency can be either "implementation"
+    // or "androidTestImplementation", depending on whether you want the
+    // dependency to appear on your APK's compile classpath or the test APK
+    // classpath.
+    androidTestImplementation('androidx.test.espresso:espresso-idling-resource:3.5.1')
 
 }
